--- a/guliMalProduct/src/main/resources/application.yaml
+++ b/guliMalProduct/src/main/resources/application.yaml
@@ -4,10 +4,16 @@ spring:
     password: 1212go12
     url: jdbc:mysql://192.168.32.100:3306/gulimall_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 0 # 逻辑未删除值(默认为0 )
 server:
-  port: 10000
+  port: 10001
