--- a/guliMalProduct/src/main/resources/application.yaml
+++ b/guliMalProduct/src/main/resources/application.yaml
@@ -8,6 +8,12 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+    alicloud:
+      access-key: LTAI5tQJy7GxqWjhayVvncRi
+      secret-key: CVRmC0I6fhgzNzOQgkmHjrX4DNJBtB
+      oss:
+        endpoint: oss-cn-shenzhen.aliyuncs.com
+
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
@@ -17,3 +23,6 @@ mybatis-plus:
       logic-not-delete-value: 0 # 逻辑未删除值(默认为0 )
 server:
   port: 10001
+logging:
+  level:
+    com.liao.gulimal: debug
