--- a/guliMalProduct/src/main/resources/application.yaml
+++ b/guliMalProduct/src/main/resources/application.yaml
@@ -13,6 +13,8 @@ spring:
       secret-key: CVRmC0I6fhgzNzOQgkmHjrX4DNJBtB
       oss:
         endpoint: oss-cn-shenzhen.aliyuncs.com
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
