--- a/gulimall-gateway/src/main/resources/application.yaml
+++ b/gulimall-gateway/src/main/resources/application.yaml
@@ -2,20 +2,30 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: test_route
-          uri: https://www.baidu.com
+        - id: ware_route
+          uri: lb://gulimall-ware
           predicates:
-            - Query=url,baidu
-        - id: qq_route
-          uri: https://www.qq.com
-          predicates:
-            - Query=url,qq
+            - Path=/api/ware/**
+          filters:
+            - RewritePath=/api/ware?(?<segment>.*),/gulimalware/$\{segment}
         - id: product_route
           uri: lb://gulimall-product
           predicates:
             - Path=/api/product/**
           filters:
             - RewritePath=/api/product?(?<segment>.*),/gulimalProduct/$\{segment}
+        - id: member-route
+          uri: lb://gulimal-member
+          predicates:
+            - Path=/api/member/**
+          filters:
+            - RewritePath=/api/member?(?<segment>.*),/gulimalmember/$\{segment}
+        - id: coupon-route
+          uri: lb://gulimal-coupon
+          predicates:
+            - Path=/api/coupon/**
+          filters:
+            - RewritePath=/api/coupon?(?<segment>.*),/gulimalcoupon/$\{segment}
         - id: third_party_route
           uri: lb://gulimall-third-part
           predicates:
