--- a/gulimalCommon/pom.xml
+++ b/gulimalCommon/pom.xml
@@ -29,11 +29,11 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.4.2</version>
         </dependency>
-<!--                <dependency>-->
-<!--                    <groupId>com.baomidou</groupId>-->
-<!--                    <artifactId>mybatis-plus</artifactId>-->
-<!--                    <version>3.3.1</version>-->
-<!--                </dependency>-->
+        <!--                <dependency>-->
+        <!--                    <groupId>com.baomidou</groupId>-->
+        <!--                    <artifactId>mybatis-plus</artifactId>-->
+        <!--                    <version>3.3.1</version>-->
+        <!--                </dependency>-->
         <!--        简化javaBean开发【为成员变量添加get、set方法】-->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -58,12 +58,12 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
-<!--        注册中心/服务发现-->
+        <!--        注册中心/服务发现-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-<!--        配置中心-->
+        <!--        配置中心-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
@@ -83,6 +83,11 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.79</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -91,7 +96,7 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2021.1</version>
+                <version>2021.0.5.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
