会使用jmeter工具，项目中完成缓存相关操作

--- a/guliMalProduct/src/main/resources/application.properties
+++ b/guliMalProduct/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.cache.type=redis
+spring.cache.redis.time-to-live=360000
+spring.cache.redis.use-key-prefix=true
+#\u662F\u5426\u7F13\u5B58\u7A7A\u503C
+spring.cache.redis.cache-null-values=true
