--- a/guliMalProduct/src/main/resources/application.yaml
+++ b/guliMalProduct/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: root
     password: 1212go12
-    url: jdbc:mysql://192.168.32.100:3306/gulimall_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.32.100:3306/gulimall_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=True
     driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
@@ -15,6 +15,11 @@ spring:
         endpoint: oss-cn-shenzhen.aliyuncs.com
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+  thymeleaf:
+    cache: true
+  redis:
+    host: 192.168.32.100
+    port: 6379
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
