--- a/guliMalProduct/src/main/resources/application.properties
+++ b/guliMalProduct/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.cache.redis.time-to-live=360000
 spring.cache.redis.use-key-prefix=true
 #\u662F\u5426\u7F13\u5B58\u7A7A\u503C
 spring.cache.redis.cache-null-values=true
+
+gulimall.thread.core-size=20
+gulimall.thread.max-size=200
+gulimall.thread.keep-alive-time=200
+spring.thymeleaf.cache=false
