认证服务算是完成了，其中单点登录有坑，只讲了流程、原理，没有整合

--- a/guliMalMember/src/main/resources/application.yaml
+++ b/guliMalMember/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
   application:
-    name: gulimal-member
+    name: gulimall-member
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
