--- a/gulimall-third-part/src/main/resources/application.yaml
+++ b/gulimall-third-part/src/main/resources/application.yaml
@@ -3,6 +3,13 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+  alicloud:
+    sms:
+      host: https://gyytz.market.alicloudapi.com
+      path: /sms/smsSend
+      templateId: 908e94ccf08b4476ba6c876d13f084ad
+      smsSignId: 2e65b1bb3d054466b82f0c9d125465e2
+      appcode: 6ca80ab7736c4666be72d368dcd8879c
   application:
     name: gulimall-third-part
 server:
