--- a/guliMalProduct/src/main/resources/application.properties
+++ b/guliMalProduct/src/main/resources/application.properties
@@ -8,3 +8,4 @@ gulimall.thread.core-size=20
 gulimall.thread.max-size=200
 gulimall.thread.keep-alive-time=200
 spring.thymeleaf.cache=false
+spring.session.store-type=redis
