学习完消息队列的重要概念，订单服务即将开始

--- a/guliMalOrder/src/main/resources/application.properties
+++ b/guliMalOrder/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-
+spring.rabbitmq.host=192.168.32.100
+spring.rabbitmq.port=5672
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.main.allow-circular-references=true
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.template.mandatory=true
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+spring.application.name=gulimall-order
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.thymeleaf.cache=false
+#redis\u8FDE\u63A5\u4FE1\u606F
+spring.redis.host=192.168.32.100
+#session\u7684\u5B58\u50A8\u7C7B\u578B
+spring.session.store-type=redis
+#\u7EBF\u7A0B\u6C60\u76F8\u5173\u914D\u7F6E
+gulimall.thread.core-size=20
+gulimall.thread.max-size=200
+gulimall.thread.keep-alive-time=200
