--- a/gulimall-gateway/src/main/resources/application.properties
+++ b/gulimall-gateway/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=gulimall-gateway
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 server.port=88
+spring.redis.host=192.168.32.100
