订单服务完成了订单确认和订单提交，订单提交中分别使用了seata和消息队列的分布式事务

--- a/guliMalOrder/src/main/resources/application.properties
+++ b/guliMalOrder/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.rabbitmq.listener.simple.acknowledge-mode=manual
 spring.application.name=gulimall-order
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.thymeleaf.cache=false
+service.vgroupMapping.default_tx_group=default
+#If you use a registry, you can ignore it
+service.default.grouplist=127.0.0.1:8091
 #redis\u8FDE\u63A5\u4FE1\u606F
 spring.redis.host=192.168.32.100
 #session\u7684\u5B58\u50A8\u7C7B\u578B
