秒杀服务完成【核心是使用队列削峰和分布式信号量构建库存】

--- a/guliMalMember/src/main/resources/application.properties
+++ b/guliMalMember/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.thymeleaf.cache=false
+spring.redis.host=192.168.32.100
+#session\u7684\u5B58\u50A8\u7C7B\u578B
+spring.session.store-type=redis
