--- a/guliMalOrder/pom.xml
+++ b/guliMalOrder/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.38.192.ALL</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>io.seata</groupId>-->
 <!--            <artifactId>seata-spring-boot-starter</artifactId>-->
