--- a/guliMalOrder/src/main/resources/application.properties
+++ b/guliMalOrder/src/main/resources/application.properties
@@ -20,3 +20,13 @@ spring.session.store-type=redis
 gulimall.thread.core-size=20
 gulimall.thread.max-size=200
 gulimall.thread.keep-alive-time=200
+#\u652F\u4ED8\u5B9D\u76F8\u5173\u914D\u7F6E
+alipay.app_id=9021000134606859
+alipay.notify_url=https://o442c90097.vicp.fun/payed/notify
+alipay.return_url=http://member.gulimall.com/memberOrder.html
+alipay.sign_type=RSA2
+alipay.charset=utf-8
+alipay.gatewayUrl=https://openapi-sandbox.dl.alipaydev.com/gateway.do
+
+#\u58F0\u660E\u65E5\u671F\u7C7B\u578B\u8F6C\u6362\u683C\u5F0F
+spring.mvc.format.date=yyyy-MM-dd HH:mm:ss
