--- a/guliMalProduct/src/main/resources/application.properties
+++ b/guliMalProduct/src/main/resources/application.properties
@@ -9,3 +9,10 @@ gulimall.thread.max-size=200
 gulimall.thread.keep-alive-time=200
 spring.thymeleaf.cache=false
 spring.session.store-type=redis
+spring.cloud.sentinel.transport.dashboard=127.0.0.1:8080
+spring.cloud.sentinel.transport.port=8719
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
+#\u5F00\u542Fsleuth\u7684debug\u65E5\u5FD7
+logging.level.org.springframework.cloud.openfeign: debug
+logging.level.org.springframework.cloud.sleuth: debug
