--- a/gulimall-gateway/src/main/resources/application.properties
+++ b/gulimall-gateway/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=gulimall-gateway
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 server.port=88
 spring.redis.host=192.168.32.100
+spring.main.allow-circular-references=true
+spring.cloud.sentinel.transport.dashboard=127.0.0.1:8080
+spring.cloud.sentinel.transport.port=8719
+management.endpoints.web.exposure.include=*
+spring.cloud.sentinel.scg.fallback.content-type=application/json
+spring.cloud.sentinel.scg.fallback.response-body={"error":666}
